<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/navigation_home"
        android:icon="@drawable/selector_menu_home"
        android:title="@string/title_home"
        app:showAsAction="always"/>
    <item android:id="@+id/navigation_calendar"
        android:icon="@drawable/selector_menu_calendar"
        android:title="@string/title_calendar"
        app:showAsAction="always"/>
    <item android:id="@+id/navigation_QR"
        android:icon="@drawable/selector_menu_scan"
        android:title="@string/title_scan"
        app:showAsAction="always"/>
    <item android:id="@+id/navigation_notification"
        android:icon="@drawable/selector_menu_notification"
        android:title="@string/title_notification"
        app:showAsAction="always"/>
    <item android:id="@+id/navigation_profile"
        android:icon="@drawable/selector_menu_profile"
        android:title="@string/title_profile"
        app:showAsAction="always"/>




</menu>