<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:gravity="center"
        android:text="ĐỔI MẬT KHẨU"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <LinearLayout
        android:id="@+id/lnEdt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_edittext"
            >

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etCurrentPassword"
                style="@style/EditTextDialogBottomSheet"
                android:hint="@string/mat_khau_hien_tai"
                android:inputType="textPassword" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btnShowPass1"
                style="@style/IconDialogBottomSheet"
          />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_edittext">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etNewPassword"
                style="@style/EditTextDialogBottomSheet"
                android:hint="@string/mat_khau_moi"
                android:inputType="textPassword" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btnShowPass2"
                style="@style/IconDialogBottomSheet" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_edittext"
>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etNewPasswordAgain"
                style="@style/EditTextDialogBottomSheet"
                android:hint="@string/nhap_lai_mat_khau_moi"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btnShowPass3"
                style="@style/IconDialogBottomSheet"/>
        </RelativeLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnEdt"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvXacNhan"
            style="@style/ButtonDialogBottomSheet"
            android:background="@drawable/selector_btn_xacnhan"
            android:text="@string/xac_nhan"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvHuy"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHuy"
            style="@style/ButtonDialogBottomSheet"
            android:background="@drawable/bg_btn_xuatkho"
            android:text="@string/huy"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvXacNhan"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>