<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/toolbar_menu_dashboard" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:background="@drawable/bg_search_base"
                android:orientation="horizontal"
                android:padding="6dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/icon_search_green" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtBaseSearch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:layout_weight="9"
                    android:background="@android:color/transparent"
                    android:hint="@string/tim_kiem"
                    android:imeOptions="actionSearch"
                    android:padding="6dp"
                    android:singleLine="true"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="12sp"
                    app:hintAnimationEnabled="true" />

                <ImageView
                    android:id="@+id/ivBaseClear"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_remove" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/tvFromDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="5"
                    android:background="@drawable/bg_search_base"
                    android:gravity="center_vertical"
                    android:padding="16dp"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:text="@string/from_date"
                    android:textSize="14sp"
                    app:drawableEndCompat="@drawable/ic_icon_calendar" />


                <TextView
                    android:id="@+id/tvToDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_weight="5"
                    android:background="@drawable/bg_search_base"
                    android:gravity="center_vertical"
                    android:padding="16dp"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:text="@string/to_date"
                    android:textSize="14sp"
                    app:drawableEndCompat="@drawable/ic_icon_calendar" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="52dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="5"
                    android:background="@drawable/bg_search_base">

                    <Spinner
                        android:id="@+id/spStatus"
                        style="@style/SpinnerStore">

                    </Spinner>

                    <ImageView style="@style/ImageSpinner" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/tvSearch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_weight="5"
                    android:background="@drawable/bg_btn_nhapkho"
                    android:gravity="center"
                    android:padding="16dp"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:text="TÌM"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBaseSearch"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/row_failure"/>
</LinearLayout>